# pgvector_django_play

./: .dockerignore  .env.sample  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  generate_env.py  get_texts.sh  hello.py  load_texts.py  pyproject.toml  text_links.csv
django-proj/myapp/: settings.py  urls.py
django-proj/qa_app/: embedding.py  models.py  views.py
django-proj/qa_app/migrations/: 0001_initial.py
django-proj/qa_app/templates/: add_entry.html  base.html  index.html  results.html
